--- a/dapp/public/stylesheets/styles.css
+++ b/dapp/public/stylesheets/styles.css
@@ -347,6 +347,40 @@ button {
     margin-left: 8px;
 }
 
+.pagination {
+    --bs-pagination-color: rgb(255,240,134);
+    --bs-pagination-bg: rgb(250,125,35);
+    --bs-pagination-disabled-bg: transparent;
+    --bs-pagination-border-color: rgb(250,125,35);
+    --bs-pagination-hover-bg: rgb(255,240,134);
+    --bs-pagination-hover-color:rgb(250,125,35);
+    --bs-pagination-hover-border-color:rgb(255,240,134);
+    --bs-pagination-disabled-border-color: rgb(103,99,50);
+    --bs-pagination-disabled-color:rgb(103,99,50);
+    --bs-pagination-active-color: rgb(250,125,35);
+    --bs-pagination-active-bg: rgb(255,240,134);
+    --bs-pagination-active-border-color:rgb(255,240,134);
+    --bs-pagination-focus-color: rgb(250,125,35);
+    --bs-pagination-focus-bg: rgb(255,240,134);
+}
+
+.pagination.dark-mode {
+    --bs-pagination-color: rgb(55,64,74);
+    --bs-pagination-bg: rgb(75,174,167);
+    --bs-pagination-disabled-bg: transparent;
+    --bs-pagination-border-color: rgb(75,174,167);
+    --bs-pagination-hover-bg: rgb(185,208,201);
+    --bs-pagination-hover-color:rgb(55,64,74);
+    --bs-pagination-hover-border-color:rgb(185,208,201);
+    --bs-pagination-disabled-border-color: rgb(68,135,135);
+    --bs-pagination-disabled-color:rgb(68,135,135);
+    --bs-pagination-active-color: rgb(55,64,74);
+    --bs-pagination-active-bg: rgb(185,208,201);
+    --bs-pagination-active-border-color:rgb(185,208,201);
+    --bs-pagination-focus-color: rgb(75,174,167);
+    --bs-pagination-focus-bg: rgb(55,64,74);
+}
+
 .nft-name-display {
     width: 210px;
     text-align: center;
