--- a/dapp/src/views/about.pug
+++ b/dapp/src/views/about.pug
@@ -16,6 +16,12 @@ html
    
       div(class="d-flex flex-row justify-content-around padding" width="70%")
          span This is the about page...
+      
+      div(class=`d-flex flex-row justify-content-between flex-nowrap link-row${themeclass}`)
+            a(href="#" class=`link-row${themeclass} flex-fill padding`) ABOUT
+            a(href=`${navWebpage}` class=`link-row${themeclass} flex-fill padding`) WEBPAGE
+            a(href=`${navTwitter}` class=`link-row${themeclass} flex-fill padding`) TWITTER
+            a(href=`${navDiscord}` class=`link-row${themeclass} flex-fill padding`) DISCORD
 
       script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous")
       
