--- a/dapp/src/views/admin.pug
+++ b/dapp/src/views/admin.pug
@@ -5,6 +5,7 @@ html
       title Specific Swap Admin
       link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous")
       link(rel="stylesheet" type="text/css" href="stylesheets/styles.css")
+      script(type="module" src="javascripts/wallet-integration.js")
       script(src="/javascripts/helpers.js")
    body(class=`${themeclass}`)
       
@@ -15,8 +16,8 @@ html
             h1(style="float: right") NFT Swap Pool Admin
          div(class="justify-content-end")
             div(class=`btn-group`)
-               button(type="button" id="wallet_connector_button" class=`btn connect-wallet${themeclass} d-flex dropdown-toggle` data-bs-toggle="dropdown" aria-expanded="false") LOADING CONNECTOR...
-               ul(class="dropdown-menu" id="wallet_connector_dropdown")
+               button(type="button" id="wallet_connector_button" class=`btn connect-wallet ${themeclass} d-flex dropdown-toggle` data-bs-toggle="dropdown" aria-expanded="false") LOADING CONNECTOR...
+               ul(class=`dropdown-menu ${themeclass}` id="wallet_connector_dropdown")
   
       div(class="d-flex flex-row justify-content-end padding" width="70%")
          div(class="input-group mb-3")
@@ -58,19 +59,19 @@ html
          
          div(id="add_nft_to_pool_dropdown_menu" class="btn-group")
                button(type="button" id="add_nft_to_pool_selection_button" class=`btn select-contract${themeclass} d-flex dropdown-toggle text-wrap` data-bs-toggle="dropdown" aria-expanded="false") ADD NFT(S) TO POOL
-               ul(class=`dropdown-menu` id="add_nft_to_pool_selection_dropdown")
+               ul(class=`dropdown-menu ${themeclass}` id="add_nft_to_pool_selection_dropdown")
          
          div(id="remove_nft_from_pool_dropdown_menu" class="btn-group")
                button(type="button" id="remove_nft_from_pool_selection_button" class=`btn select-contract${themeclass} d-flex dropdown-toggle text-wrap` data-bs-toggle="dropdown" aria-expanded="false") REMOVE NFT(S) FROM POOL
-               ul(class=`dropdown-menu` id="remove_nft_from_pool_selection_dropdown")
+               ul(class=`dropdown-menu ${themeclass}` id="remove_nft_from_pool_selection_dropdown")
          
          div(id="deposit_to_pool_dropdown_menu" class="btn-group")
                button(type="button" id="deposit_to_pool_selection_button" class=`btn select-contract${themeclass} d-flex dropdown-toggle text-wrap` data-bs-toggle="dropdown" aria-expanded="false") TEST DEPOSIT
-               ul(class=`dropdown-menu` id="deposit_to_pool_selection_dropdown")
+               ul(class=`dropdown-menu ${themeclass}` id="deposit_to_pool_selection_dropdown")
          
          div(id="withdraw_from_pool_dropdown_menu" class="btn-group")
                button(type="button" id="withdraw_from_pool_selection_button" class=`btn select-contract${themeclass} d-flex dropdown-toggle text-wrap` data-bs-toggle="dropdown" aria-expanded="false") TEST WITHDRAWAL
-               ul(class=`dropdown-menu` id="withdraw_from_pool_selection_dropdown")
+               ul(class=`dropdown-menu ${themeclass}` id="withdraw_from_pool_selection_dropdown")
          
       div(class="modal modal-dialog modal-xl fade" id="messageBox" tabindex="-1" aria-labelledby="messageBoxLabel" aria-hidden="true")
          div(class="modal-dialog")
@@ -114,7 +115,7 @@ html
          div(class="modal-dialog")
             div(class="modal-content")
                div(class=`modal-header ${themeclass}`)
-                  button(type="button" class=`btn-close themed-color${themeclass}` data-bs-dismiss="modal" aria-label="Close")
+                  button(type="button" class=`btn-close themed-color${themeclass}` data-bs-dismiss="modal" aria-label="Close" onclick="resetOnClick()")
                div(class=`modal-body ${themeclass} light`)
                   div(class="d-flex flex-row")
                      
@@ -132,5 +133,4 @@ html
       script !{pagingScript}
 
       script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous")
-      script(type="module" src="javascripts/wallet-integration.js")
       script(src="https://cdn.jsdelivr.net/npm/@stricahq/typhonjs@1.2.8/dist/index.min.js")
