--- a/dapp/src/views/index.pug
+++ b/dapp/src/views/index.pug
@@ -5,6 +5,7 @@ html
       title Specific Swap
       link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous")
       link(rel="stylesheet" type="text/css" href="stylesheets/styles.css")
+      script(type="module" src="javascripts/wallet-integration.js")
       script(src="/javascripts/helpers.js")
    body(class=`${themeclass}`)
       div(id="topofpage")
@@ -15,8 +16,8 @@ html
             h1(style="float: right") NFT Swap Pool
          div(class="justify-content-end")
             div(class="btn-group")
-               button(type="button" id="wallet_connector_button" class=`btn connect-wallet${themeclass} d-flex dropdown-toggle` data-bs-toggle="dropdown" aria-expanded="false") LOADING CONNECTOR...
-               ul(class=`dropdown-menu` id="wallet_connector_dropdown")
+               button(type="button" id="wallet_connector_button" class=`btn connect-wallet ${themeclass} d-flex dropdown-toggle` data-bs-toggle="dropdown" aria-expanded="false") LOADING CONNECTOR...
+               ul(class=`dropdown-menu ${themeclass}` id="wallet_connector_dropdown")
   
       div(class="modal modal-dialog modal-lg fade" id="messageBox" tabindex="-1" aria-labelledby="messageBoxLabel" aria-hidden="true")
          div(class="modal-dialog")
@@ -33,8 +34,8 @@ html
       div(class="light" style="margin-bottom: 10px; text-align: center;") Select the NFTs you want to receive - Up to 7
       div(class="d-flex flex-row justify-content-between")
             div(id="smart_contract_dropdown-menu" class="btn-group")
-               button(type="button" id="swap_pool_selection_button" class=`btn connect-wallet${themeclass} d-flex dropdown-toggle` data-bs-toggle="dropdown" aria-expanded="false") 
-               ul(class=`dropdown-menu` id="swap_pool_selection_dropdown")
+               button(type="button" id="swap_pool_selection_button" class=`btn connect-wallet ${themeclass} d-flex dropdown-toggle` data-bs-toggle="dropdown" aria-expanded="false") 
+               ul(class=`dropdown-menu ${themeclass}` id="swap_pool_selection_dropdown")
             div(id="num_selected") 0 SELECTED
             div(id="search_field")
                div(class="input-group mb-3")
@@ -78,19 +79,11 @@ html
          div(class="modal-dialog")
             div(class="modal-content")
                div(class=`modal-header ${themeclass}`)
-                  button(type="button" class=`btn-close themed-color${themeclass}` data-bs-dismiss="modal" aria-label="Close")
+                  button(type="button" class=`btn-close themed-color${themeclass}` data-bs-dismiss="modal" aria-label="Close" onclick="resetSelectedWalletNFTs();")
                div(class=`modal-body ${themeclass} light`) 
                   
                   div(class="d-flex flex-row")
                      h1(class="modal-title fs-5 padding" id="selectNFTsDialogLabel") Select NFTs to swap
-                     div(id="search_field_dialog")
-                        div(class="input-group mb-3")
-                           input(type="text" class=`form-control searchfield${themeclass}` placeholder="SEARCH" aria-label="SEARCH" aria-describedby="basic-addon2")
-                           span(class=`input-group-text${themeclass} padding` id="basic-addon2")
-                              svg(xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" viewBox="0 0 16 16")
-                                 path(d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z")
-                           svg(xmlns="http://www.w3.org/2000/svg" height="48" width="48" fill="currentColor" class=`button-color${themeclass} show-hover-pointer`)
-                              path(d="M24 40q-6.65 0-11.325-4.675Q8 30.65 8 24q0-6.65 4.675-11.325Q17.35 8 24 8q4.25 0 7.45 1.725T37 14.45V8h3v12.7H27.3v-3h8.4q-1.9-3-4.85-4.85Q27.9 11 24 11q-5.45 0-9.225 3.775Q11 18.55 11 24q0 5.45 3.775 9.225Q18.55 37 24 37q4.15 0 7.6-2.375 3.45-2.375 4.8-6.275h3.1q-1.45 5.25-5.75 8.45Q29.45 40 24 40Z")
                   div(class="nft-list light align-content-start d-flex mb-3 flex-row flex-wrap" id="wallet_nfts") Loading ...
                div(class="modal-footer d-flex justify-content-between")
                   button(type="button" class=`btn themed-color${themeclass}` data-bs-dismiss="modal" onclick="resetSelectedWalletNFTs();") BACK
@@ -105,5 +98,5 @@ html
       //-script !{domLoadedScript}
 
       script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous")
-      script(type="module" src="javascripts/wallet-integration.js")
+      //-script(type="module" src="javascripts/wallet-integration.js")
       script(src="https://cdn.jsdelivr.net/npm/@stricahq/typhonjs@1.2.8/dist/index.min.js")
