Minor fix to the display of the progress spinner

--- a/dapp/public/stylesheets/styles.css
+++ b/dapp/public/stylesheets/styles.css
@@ -424,6 +424,11 @@ button {
     cursor: pointer;
 }
 
+span.spinner-border {
+    margin-left: 5px;
+    width:15px !important; 
+    height:15px !important;
+}
 
 a.connect-button {
     background-color: inherit;
