--- a/dapp/src/views/admin.pug
+++ b/dapp/src/views/admin.pug
@@ -59,22 +59,22 @@ html
          
          div(id="add_nft_to_pool_dropdown_menu" class="btn-group")
                button(type="button" id="add_nft_to_pool_selection_button" class=`btn select-contract${themeclass} d-flex dropdown-toggle text-wrap` data-bs-toggle="dropdown" aria-expanded="false") ADD NFT(S) TO POOL
-                  span(class="spinner-border" role="status" id="addNFTSpinner" style="width:15px !important; height:15px !important;display:none;") 
+                  span(class="spinner-border" role="status" id="addNFTSpinner" style="display:none;") 
                ul(class=`dropdown-menu ${themeclass}` id="add_nft_to_pool_selection_dropdown")
          
          div(id="remove_nft_from_pool_dropdown_menu" class="btn-group")
                button(type="button" id="remove_nft_from_pool_selection_button" class=`btn select-contract${themeclass} d-flex dropdown-toggle text-wrap` data-bs-toggle="dropdown" aria-expanded="false") REMOVE NFT(S) FROM POOL
-                  span(class="spinner-border" role="status" id="removeNFTSpinner" style="width:15px !important; height:15px !important;display:none;") 
+                  span(class="spinner-border" role="status" id="removeNFTSpinner" style="display:none;") 
                ul(class=`dropdown-menu ${themeclass}` id="remove_nft_from_pool_selection_dropdown")
          
          div(id="deposit_to_pool_dropdown_menu" class="btn-group")
                button(type="button" id="deposit_to_pool_selection_button" class=`btn select-contract${themeclass} d-flex dropdown-toggle text-wrap` data-bs-toggle="dropdown" aria-expanded="false") TEST DEPOSIT
-                  span(class="spinner-border" role="status" id="testDepositSpinner" style="width:15px !important; height:15px !important; display:none;") 
+                  span(class="spinner-border" role="status" id="testDepositSpinner" style=" display:none;") 
                ul(class=`dropdown-menu ${themeclass}` id="deposit_to_pool_selection_dropdown")
                         
          div(id="withdraw_from_pool_dropdown_menu" class="btn-group")
                button(type="button" id="withdraw_from_pool_selection_button" class=`btn select-contract${themeclass} d-flex dropdown-toggle text-wrap` data-bs-toggle="dropdown" aria-expanded="false") TEST WITHDRAWAL
-                  span(class="spinner-border" role="status" id="testWithdrawSpinner" style="width:15px !important; height:15px !important; display:none;")
+                  span(class="spinner-border" role="status" id="testWithdrawSpinner" style=" display:none;")
                ul(class=`dropdown-menu ${themeclass}` id="withdraw_from_pool_selection_dropdown")
          
       div(class="modal modal-dialog modal-xl fade" id="messageBox" tabindex="-1" aria-labelledby="messageBoxLabel" aria-hidden="true")
